test/should_fail/rel_op_1.erl
-module(rel_op_1).

-spec fail(term()) -> tuple().
fail(X) -> X > X.
